--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "node-sass": "^4.14.1",
     "react": "^16.13.1",
     "react-alert": "^7.0.2",
+    "react-alert-template-basic": "^1.0.0",
     "react-bootstrap": "^1.3.0",
     "react-dom": "^16.13.1",
     "react-icons": "^3.10.0",
